--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "mock-server": "ts-node --project tsconfig.mock-server.json mock-server/index.ts"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.8.0",
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.6.13",
     "@hookform/resolvers": "^5.0.1",
@@ -22,6 +23,7 @@
     "highlight.js": "^11.11.1",
     "i18next": "^24.2.1",
     "lucide-react": "^0.476.0",
+    "msw": "^2.8.5",
     "next": "^15.3.2",
     "next-intl": "^3.26.3",
     "react": "^19.1.0",
@@ -32,6 +34,7 @@
     "react-markdown": "^10.0.0",
     "rehype-highlight": "^7.0.2",
     "simplebar-react": "^3.3.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.7.2",
     "zod": "^3.25.28",
     "zustand": "^5.0.5"
@@ -51,5 +54,10 @@
     "typescript": "^5",
     "uuid": "^11.1.0",
     "ws": "^8.18.2"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
