--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react-markdown": "^10.0.0",
     "rehype-highlight": "^7.0.2",
     "simplebar-react": "^3.3.0",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.7.2",
     "zod": "^3.25.28",
